deployments/logging/promtail/extra.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: promtail-headless
  namespace: logging
  labels:
    app: promtail
spec:
  ports:
    - port: 3101
      protocol: TCP
      name: http-metrics
      targetPort: http-metrics
  selector:
    app: promtail
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: promtail
  namespace: logging
  labels:
    app: promtail
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://traefik-forward-auth.infra.svc
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
    - host: promtail.cluster.rebelinblue.com
      http:
        paths:
          - path: /
            backend:
              serviceName: promtail-headless
              servicePort: 3101
  tls:
    - hosts:
        - promtail.cluster.rebelinblue.com
      secretName: promtail-tls
