deployments/logging/promtail/promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: logging
  labels:
    k8s-app: promtail
spec:
  selector:
    matchLabels:
      k8s-app: promtail
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: promtail
    spec:
      serviceAccountName: promtail
      containers:
        - name: promtail
          image: grafana/promtail:v0.4.0-arm
          imagePullPolicy: Always
          args:
            - -config.file=/etc/promtail/promtail.yaml
            - -client.url=http://loki:3100/api/prom/push
            - -log.level=info
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
            - name: run
              mountPath: /run/promtail
            - name: containers
              mountPath: /var/log/containers
              readOnly: true
            - name: pods
              mountPath: /var/log/pods
              readOnly: true
          ports:
            - containerPort: 3101
              name: http-metrics
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 0
            runAsUser: 0
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
      volumes:
        - name: config
          configMap:
            name: promtail
        - name: run
          hostPath:
            path: /run/promtail
        - name: containers
          hostPath:
            path: /var/log/containers
        - name: pods
          hostPath:
            path: /var/log/pods
---
apiVersion: v1
kind: Service
metadata:
  name: promtail
  namespace: logging
  labels:
    k8s-app: promtail
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3101"
spec:
  type: ClusterIP
  ports:
    - port: 3101
      protocol: TCP
      name: http-metrics
      targetPort: http-metrics
  selector:
    k8s-app: promtail
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: promtail
  namespace: logging
  labels:
    k8s-app: promtail
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://traefik-forward-auth.infra.svc
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
    - host: promtail.cluster.rebelinblue.com
      http:
        paths:
          - path: /
            backend:
              serviceName: promtail
              servicePort: 3101
  tls:
    - hosts:
        - promtail.cluster.rebelinblue.com
      secretName: promtail-tls
